# Hydronom

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Hydronom.sln  LICENSE  README.md  SECURITY.md  fleet-ground-station-architecture.md  hydronom_pico_core_contract_audit_01.txt  package-lock.json  runtime_real_stack_dump.txt  runtime_task_decision_dump.txt  src_architecture_tree_clean.txt
Core/: Hydronom.Core.csproj  Program.cs
hydronom-communication/pico/comm-sik-433/: Cargo.toml  flash-rp2350.ps1  memory.x
hydronom-communication/pico/comm-sik-433/.cargo/: config.toml
hydronom-communication/pico/comm-sik-433/src/: main.rs
hydronom-communication/pico/comm-sik-433/src/bridge/: mod.rs  radio_bridge.rs
hydronom-communication/pico/comm-sik-433/src/diagnostics/: mod.rs
hydronom-communication/pico/comm-sik-433/src/protocol/: mod.rs  node_identity.rs
hydronom-communication/pico/comm-sik-433/tools/: hydronom-rf-commandserver-bridge.ps1
hydronom-mcu-pico/firmware/: .gitignore  Cargo.toml  build.rs  memory.x  rust-toolchain.toml
hydronom-mcu-pico/firmware/.cargo/: config.toml
hydronom-mcu-pico/firmware/src/: main.rs
hydronom-mcu-pico/firmware/src/actuators/: actuator.rs  mod.rs  output_bank.rs  pwm_esc.rs
hydronom-mcu-pico/firmware/src/app/: mod.rs  runtime.rs  scheduler.rs  state.rs
hydronom-mcu-pico/firmware/src/board/: mod.rs  pico2w.rs  pins.rs
hydronom-mcu-pico/firmware/src/config/: actuator_profile.rs  defaults.rs  mod.rs  vehicle_profile.rs
hydronom-mcu-pico/firmware/src/diagnostics/: counters.rs  health.rs  mod.rs
hydronom-mcu-pico/firmware/src/protocol/: commands.rs  crc.rs  frame.rs  mod.rs  parser.rs  telemetry.rs
hydronom-mcu-pico/firmware/src/safety/: arming.rs  failsafe.rs  limits.rs  mod.rs  watchdog.rs
hydronom-mcu-pico/firmware/src/transport/: mod.rs
hydronom-sensors/pico/imu/bno085/: Cargo.toml  memory.x
hydronom-sensors/pico/imu/bno085/.cargo/: config.toml
hydronom-sensors/pico/imu/bno085/src/: main.rs
hydronom-sensors/pico/imu/bno085/src/diagnostics/: console_debug.rs  mod.rs
hydronom-sensors/pico/imu/bno085/src/mock/: mock_bno085.rs  mod.rs  motion_profile.rs
hydronom-sensors/pico/imu/bno085/src/node/: boot_sequence.rs  frame_builders.rs  mod.rs  payload_debug.rs
(+1202 files in other folders)
