[package]
name = "hydronom-mcu-pico-firmware"
version = "0.1.0"
edition = "2021"
description = "Hydronom platform-independent embedded actuation node firmware for Raspberry Pi Pico 2 W."
authors = ["Hydronom Team"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }
fixed = "1"

embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "embassy-time-driver", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10", features = ["defmt", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-usb = { version = "0.6", features = ["defmt"] }